<?xml version="1.0"?>
<package format="2">
  <name>tango_description</name>
  <version>2.1.0</version>
  <description>The tango_description package contains the urdf description and meshes for the robot</description>
  <maintainer email="robotics@fearn.org.uk">Tomos Fearn</maintainer>
  <url type="repository">https://github.com/fearn-robotics/tango_description</url>
  <author email="keiranburrows@hotmail.co.uk">Dr Keiran Burrows</author>
  <author email="robotics@fearn.org.uk">Tomos Fearn</author>
  <license>BSD-3</license>

  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>

  </export>
</package>
